--- a/styles.css
+++ b/styles.css
@@ -7,12 +7,22 @@
 body{
     background-color: #222;
 }
+#heading{
+    text-align: center;
+    color: white;
+    margin-top: 7%;
+}
+#sub{
+    text-align: center;
+    color: rgb(255, 255, 255);
+    margin-top: 10px;
+}
 .card{
     width: 90%;
     max-width: 470px;
     background: linear-gradient(135deg, #00feba, #5b548a);
     color: #fff;
-    margin: 100px auto 0;
+    margin: 60px auto 0;
     border-radius: 20px;
     padding: 40px 35px;
     text-align: center;
